--- a/笔记/01.课程指南环境搭建.md
+++ b/笔记/01.课程指南环境搭建.md
@@ -2,7 +2,7 @@
 
   本章节介绍课程的背景和知识要点，开局即送课程专享原创课程食用指南、提问指南、小程序评测，让你的学习事半功倍；开发环境搭建指导，开启效率之门。
 
-  ##视频：*1-1 《慕慕到家》小程序项目进阶实战导学教程 (11:08)**试看**
-  ##视频：*1-2 课程食用指南 (01:26)
-  ##视频：*1-3 小黄，做一个小程序 (03:56)
-  ##视频：*1-4 开发环境、开发工具准备 (08:09)
+  ##视频： 1-1 《慕慕到家》小程序项目进阶实战导学教程 (11:08)
+  ##视频： 1-2 课程食用指南 (01:26)
+  ##视频： 1-3 小黄，做一个小程序 (03:56)
+  ##视频： 1-4 开发环境、开发工具准备 (08:09)
