--- a/笔记/01.课程指南环境搭建.md
+++ b/笔记/01.课程指南环境搭建.md
@@ -1,8 +1,79 @@
-# 第1章 课程指南：配套教材及环境搭建 
+
+
+[《慕慕到家》家政小程序组件化进阶实战](https://coding.imooc.com/class/chapter/498.html#Anchor)
+
+# 第1章 课程指南：配套教材及环境搭建
 
   本章节介绍课程的背景和知识要点，开局即送课程专享原创课程食用指南、提问指南、小程序评测，让你的学习事半功倍；开发环境搭建指导，开启效率之门。
 
-  ##视频： 1-1 《慕慕到家》小程序项目进阶实战导学教程 (11:08)
-  ##视频： 1-2 课程食用指南 (01:26)
-  ##视频： 1-3 小黄，做一个小程序 (03:56)
-  ##视频： 1-4 开发环境、开发工具准备 (08:09)
+  ##《慕慕到家》小程序项目进阶实战导学教程 
+
+![image-20210824143013433](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824143013433.png)
+
+> 快速开发 不断迭代 重构
+
+![image-20210824145639177](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824145639177.png)
+
+![image-20210824145649214](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824145649214.png)
+
+### 课程有什么
+
+- 微信小程序关键知识
+- 业务、通用组件实战
+- JavaScript es6
+- 即时通讯 SDK集成实战
+- 全局状态管理机制实战
+
+### 课程里没有什么
+
+- 没有炫技，课程代码即工作代码
+- 没有理论知识负担
+
+### 课程目标
+
+![image-20210824150750435](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824150750435.png)
+
+![image-20210824150759400](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824150759400.png)
+
+### 课程适合
+
+- 在校学生
+- 初级 中级 前端开发工程师
+- 服务端开发工程师
+
+## 课程食用指南 
+
+![image-20210824150917850](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824150917850.png)
+
+  ##小黄，做一个小程序 
+
+![image-20210824151707999](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824151707999.png)
+
+![image-20210824151827914](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824151827914.png)
+
+![image-20210824151844815](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824151844815.png)
+
+
+
+  ##开发环境、开发工具准备 
+
+- 微信开发者工具
+- 获取appid
+
+![image-20210824153110437](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824153110437.png)
+
+- 创建小程序
+
+![image-20210824153144667](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824153144667.png)
+
+### 设置编辑器
+
+![image-20210824155432028](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824155432028.png)
+
+![image-20210824155507665](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824155507665.png)
+
+### 课程编辑器
+
+webstrom 
+
+![image-20210824155709852](https://gitee.com/sheep101/typora-img-save/raw/master/img/image-20210824155709852.png)
